[project]
name = "sql-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.5",
    "dotenv>=0.9.9",
    "langchain>=0.3.0",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.11.7",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.42",
]
